--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
    <br>
    Ariel 40700 Israel
    <br>
-   <img src="Ariel_logo.jpg" alt="Test image" width="200px" align="right">
+   <img src="../Ariel_logo.jpg" alt="Test image" width="200px" align="right">
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
@@ -57,8 +57,12 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
-- about.md
 - research.md
+- team.md
+- publications.md
+- teaching.md
+- facilities.md
+- news.md
 
 # Build settings
 theme: minima
