--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Fluid and Ocean Mechanics
 author:
-  name: Dr. Anatoliy Khait
+  name: Dr Anatoliy Khait
   email: anatoliyk@ariel.ac.il
   room: 8.1.1
 description: > # this means to ignore newlines until "show_excerpts:"
