--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
    <br>
    Ariel 40700 Israel
    <br>
-   <img src="/Ariel_logo.jpg" alt="Test image" width="200px" align="right">
+   <img src="/Ariel_logo.png" alt="Test image" width="200px" align="right">
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
